--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.8.1
   go_router: ^7.1.1
   url_launcher: ^6.1.11
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
