--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   go_router: ^7.1.1
   url_launcher: ^6.1.11
   awesome_snackbar_content: ^0.1.3
+  clay_containers: ^0.3.2
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
