--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   clay_containers: ^0.3.2
   animated_text_kit: ^4.2.2
+  select_form_field: ^2.2.0
 
 dev_dependencies:
   flutter_test:
