--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   clay_containers: ^0.3.2
   animated_text_kit: ^4.2.2
   select_form_field: ^2.2.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -70,10 +71,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - assets/images/compass-fav.png
   assets:
     - assets/images/
 
-      # - images/wallpaper1.jpeg
+    # - images/wallpaper1.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
