--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   select_form_field: ^2.2.0
   shared_preferences: ^2.1.2
+  flutter_fadein: ^2.0.0
 
 dev_dependencies:
   flutter_test:
