--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:usesCleartextTraffic="true" 
         android:label="bible_compass_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+       >
+       <!--just added the first paragraph -->
+       <!-- <application android:usesCleartextTraffic="true"/> -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,4 +35,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    
 </manifest>
