--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,23 @@ dev_dependencies:
   build_runner: ^2.4.4
   freezed: ^2.3.5
   json_serializable: ^6.7.0
+  flutter_launcher_icons:
+    ^0.13.1
+    # path: ../..
+
+flutter_launcher_icons:
+  image_path: "assets/images/compass-fav.png"
+  android: true
+  ios: true
+  background_color_ios: "#ffffff"
+  background_color_android: "#ffffff"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/images/compass-fav.png"
+  macos:
+    generate: true
+    image_path: "assets/images/compass-fav.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
