--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   share_plus: ^7.0.2
   jwt_decoder: ^2.0.1
   google_fonts: ^5.1.0
+  accordion: ^2.5.1
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +64,7 @@ dev_dependencies:
   build_runner: ^2.4.4
   freezed: ^2.3.5
   json_serializable: ^6.7.0
-  flutter_launcher_icons:
-    ^0.13.1
-    # path: ../..
+  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   image_path: "assets/images/compass-fav.png"
