--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   jwt_decoder: ^2.0.1
   google_fonts: ^5.1.0
   accordion: ^2.5.1
+  flutter_pdfview: ^1.3.1
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +97,7 @@ flutter:
   #   - assets/images/compass-fav.png
   assets:
     - assets/images/
+    - assets/pdfs/
     # - google_fonts/
 
     # - images/wallpaper1.jpeg
