--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   accordion: ^2.5.1
   flutter_pdfview: ^1.3.1
   path_provider: ^2.0.15
+  tuple: ^2.0.2
 
 dev_dependencies:
   flutter_test:
