--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:usesCleartextTraffic="true" 
-        android:label="bible_compass_app"
+        android:label="Bible Compass"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
        >
