--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  avatar_glow: ^2.0.2
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.6
   dio: ^5.1.2
@@ -73,8 +74,8 @@ flutter_launcher_icons:
   image_path: "assets/images/compass-fav.png"
   android: true
   ios: true
-  background_color_ios: "#ffffff"
-  background_color_android: "#ffffff"
+  background_color_ios: "#FFFFFF"
+  background_color_android: "#FFFFFF"
   min_sdk_android: 21
   web:
     generate: true
