--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,11 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+// START: FlutterFire Configuration
+// apply plugin: 'com.google.gms.google-services'
+// END: FlutterFire Configuration
+
+
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -51,7 +56,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.bible_compass_app"
+        applicationId "com.snappyfix.bible_compass_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         // minSdkVersion flutter.minSdkVersion
@@ -71,6 +76,16 @@ android {
        }
    }
    buildTypes {
+    debug {
+        signingConfig signingConfigs.debug
+        ndk {
+            // Enable debuggable mode for native code
+            debuggable true
+        }
+        // Enable generation of debug symbols
+        // This will generate a mapping.txt file
+        minifyEnabled false
+    }
        release {
            signingConfig signingConfigs.release
        }
