--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_pdfview: ^1.3.1
   path_provider: ^2.0.15
   tuple: ^2.0.2
+  firebase_core: ^2.15.1
+  firebase_crashlytics: ^3.3.5
 
 dev_dependencies:
   flutter_test:
